host/features/eh_host_feat_wifi/include/eh_host_wifi.h

esp_err_t eh_host_wifi_set_country(const wifi_country_t *country);
esp_err_t eh_host_wifi_get_country(wifi_country_t *country);
esp_err_t eh_host_wifi_ap_get_sta_list(wifi_sta_list_t *sta);
esp_err_t eh_host_wifi_scan_get_ap_records(uint16_t *number,
                                           wifi_ap_record_t *ap_records);
esp_err_t eh_host_wifi_set_protocols(wifi_interface_t ifx, wifi_protocols_t *protocols);
esp_err_t eh_host_wifi_get_protocols(wifi_interface_t ifx, wifi_protocols_t *protocols);
esp_err_t eh_host_wifi_set_bandwidths(wifi_interface_t ifx, wifi_bandwidths_t *bw);
esp_err_t eh_host_wifi_get_bandwidths(wifi_interface_t ifx, wifi_bandwidths_t *bw);
/* TODO(wifi-rpc): V1 union lacks twt_config payload. */
esp_err_t eh_host_wifi_sta_twt_config(wifi_twt_config_t *config);