host/linux/eh_host_linux_python_ctypes/eh_host/wifi.py


def set_country(cc: str,
                schan: int = 1,
                nchan: int = 13,
                max_tx_power: int = 20,
                policy: int = 0) -> None:
    """Set the full `wifi_country_t` (cc + channel range + max TX power
    + policy).  `policy` is `wifi_country_policy_t` (0=auto, 1=manual)."""
    cc_b = cc.encode("ascii")
    if len(cc_b) > 3:
        raise ValueError(f"cc must be ≤ 3 chars, got {cc!r}")
    country = WifiCountry(cc=cc_b, schan=schan, nchan=nchan,
                          max_tx_power=max_tx_power, policy=policy)
    rc = _set_country(byref(country))
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_country", rc)


def get_country() -> dict:
    """Read the full `wifi_country_t` as a dict."""
    country = WifiCountry()
    rc = _get_country(byref(country))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_country", rc)
    return {
        "cc":           country.cc.decode("ascii", errors="replace"),
        "schan":        country.schan,
        "nchan":        country.nchan,
        "max_tx_power": country.max_tx_power,
        "policy":       country.policy,
    }


def ap_get_sta_list() -> bytes:
    """Read the SoftAP-side `wifi_sta_list_t` as raw bytes.  Layout is
    target-sensitive (`ESP_WIFI_MAX_CONN_NUM` varies by chip); callers
    decode against the pinned `wifi_sta_list_t` definition.
    """
    buf = (c_uint8 * _WIFI_STA_LIST_T_SIZE)()
    rc = _ap_get_sta_list(buf)
    if rc != 0:
        raise EhHostError("eh_host_wifi_ap_get_sta_list", rc)
    return bytes(buf)


def scan_get_ap_records(max_n: int) -> tuple[int, bytes]:
    """Read up to `max_n` `wifi_ap_record_t` entries.  Returns
    `(actual_n, raw_bytes)` where `raw_bytes` is `max_n × _WIFI_AP_RECORD_T_SIZE`
    bytes; only the first `actual_n × _WIFI_AP_RECORD_T_SIZE` are valid.
    Caller decodes against the pinned `wifi_ap_record_t` definition.
    """
    if max_n <= 0:
        raise ValueError(f"max_n must be > 0, got {max_n}")
    n = c_uint16(max_n)
    buf = (c_uint8 * (_WIFI_AP_RECORD_T_SIZE * max_n))()
    rc = _scan_get_ap_records(byref(n), buf)
    if rc != 0:
        raise EhHostError("eh_host_wifi_scan_get_ap_records", rc)
    return n.value, bytes(buf)


def set_protocols(iface: int, ghz_2g: int, ghz_5g: int = 0) -> None:
    """Set the per-band protocol bitmap on `iface`.  `ghz_2g` and
    `ghz_5g` are `WIFI_PROTOCOL_*` bitmaps."""
    p = WifiProtocols(ghz_2g=ghz_2g, ghz_5g=ghz_5g)
    rc = _set_protocols(iface, byref(p))
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_protocols", rc)


def get_protocols(iface: int) -> tuple[int, int]:
    """Return `(ghz_2g, ghz_5g)` — per-band protocol bitmaps on `iface`."""
    p = WifiProtocols()
    rc = _get_protocols(iface, byref(p))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_protocols", rc)
    return p.ghz_2g, p.ghz_5g


def set_bandwidths(iface: int, ghz_2g: int, ghz_5g: int = 0) -> None:
    """Set per-band bandwidth on `iface`.  Each is `WIFI_BW_HT20` /
    `WIFI_BW_HT40`."""
    b = WifiBandwidths(ghz_2g=ghz_2g, ghz_5g=ghz_5g)
    rc = _set_bandwidths(iface, byref(b))
    if rc != 0:
        raise EhHostError("eh_host_wifi_set_bandwidths", rc)


def get_bandwidths(iface: int) -> tuple[int, int]:
    """Return `(ghz_2g, ghz_5g)` per-band bandwidths on `iface`."""
    b = WifiBandwidths()
    rc = _get_bandwidths(iface, byref(b))
    if rc != 0:
        raise EhHostError("eh_host_wifi_get_bandwidths", rc)
    return b.ghz_2g, b.ghz_5g


def sta_twt_config(post_wakeup_event: bool = False,
                   twt_enable_keep_alive: bool = False) -> None:
    """Configure STA-side iTWT post-wakeup-event + keep-alive flags."""
    c = WifiTwtConfig(post_wakeup_event=post_wakeup_event,
                      twt_enable_keep_alive=twt_enable_keep_alive)
    rc = _sta_twt_config(byref(c))
    if rc != 0:
        raise EhHostError("eh_host_wifi_sta_twt_config", rc)
